objects/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anand
  namespace: anand
spec:
  selector:
    matchLabels:
      app: anand
  template:
    metadata:
      labels:
        app: anand
    spec:
      containers:
      - name: petclinic
        image: 288701581823.dkr.ecr.ap-northeast-1.amazonaws.com/test:2
        resources:
          limits:
            memory: "500Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
