objects/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: anandsvc
  namespace: anand
spec:
  selector:
    app: anand
  ports:
  - port: 30161
    targetPort: 8080
